--- a/styles/project3.css
+++ b/styles/project3.css
@@ -1,3 +1,14 @@
+ @media only screen and (max-width: 480px){
+    .flex-container {
+        flex-direction: column;
+    }
+
+    #navbar {
+        width: 100%;
+    }
+
+ }
+
 /*elimina cualquier margen y relleno predeterminado*/
 * {
     margin: 0;
@@ -8,10 +19,12 @@
 
 html {
     scroll-behavior: smooth;
+    font-size: 62.5%; /*10px, para usar rem mas facil*/
 }
 
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.6rem;
 }
 
 .flex-container {
@@ -22,27 +35,61 @@ body {
 #navbar {
     width: 350px;
     min-width:350px;
+    border-right: 1.5px solid grey;
+}
+
+#navbar ul {
+    color: dimgrey;
 }
 
 #main-doc {
     overflow: auto;
-}
-
-#navbar header, a {
-    padding: 0 25px;
+    padding: 40px 40px;
 }
 
 #navbar ul li{
-    border: 1.1px solid grey;
-    
+    border-top: 1.5px solid grey;  
 }
 
-li {
-    padding: 15px 0;
+#navbar li, #navbar header {
+    padding: 15px 25px;
 }
 
-header {
+#navbar header, .main-section header {
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
 }
+
+#navbar a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#main-doc li {
+    list-style-position: inside;
+    margin-left: 3rem;
+}
+
+.main-section {
+    margin-top: 30px;
+}
+
+.main-section#introduction {
+    margin-top: 0;
+}
+
+.main-section p, code, .main-section ul li {
+    margin-top: 20px;
+}
+
+code {
+    display: block;
+    margin-left: 20px;
+}
+
+.multiline {
+    white-space: pre-wrap;
+  }
+
+
 
