--- a/styles/project3.css
+++ b/styles/project3.css
@@ -1,14 +1,3 @@
- @media only screen and (max-width: 480px){
-    .flex-container {
-        flex-direction: column;
-    }
-
-    #navbar {
-        width: 100%;
-    }
-
- }
-
 /*elimina cualquier margen y relleno predeterminado*/
 * {
     margin: 0;
@@ -88,8 +77,49 @@ code {
 }
 
 .multiline {
-    white-space: pre-wrap;
+    white-space: pre-line;
   }
+
+
+  @media (max-width: 480px){
+    .flex-container {
+        flex-direction: column;
+
+    }
+
+    .wrapper {
+        height: 40vh;
+        min-height: 0;
+        overflow-y: scroll;
+    }
+
+    #navbar {
+        width: 100%;        
+    }
+
+    #navbar li, #navbar header {
+        padding: 15px 0px;
+    }
+
+    a {
+        padding: 0 20px;
+    }
+
+    #main-doc {
+        overflow: unset;
+        padding: 40px 0px;
+    }
+
+    .main-section {
+        padding: 0px 20px;
+    }
+
+    code {
+        margin-left: 0;
+        font-size: 1.2rem;
+    }
+
+ }
 
 
 
