--- a/styles/project3.css
+++ b/styles/project3.css
@@ -1,4 +1,4 @@
- @media only screen and (max-width: 480px){
+ @media only screen and (width < 480px){
     .flex-container {
         flex-direction: column;
     }
