--- a/styles/project3.css
+++ b/styles/project3.css
@@ -1,14 +1,3 @@
- @media only screen and (width < 768px){
-    .flex-container {
-        flex-direction: column;
-    }
-
-    #navbar {
-        width: 100%;
-    }
-
- }
-
 /*elimina cualquier margen y relleno predeterminado*/
 * {
     margin: 0;
@@ -92,7 +81,9 @@ code {
   }
 
 
-  @media (max-width: 480px){
+  /*MEDIA QUERY */
+
+@media (max-width: 768px){
     .flex-container {
         flex-direction: column;
 
