--- a/styles/project4.css
+++ b/styles/project4.css
@@ -111,6 +111,10 @@ iframe {
     align-items: center;
 }
 
+#footer {
+    background-color: lightgray;
+}
+
 .header-container {
     display: flex;
     justify-content: space-between;
@@ -177,4 +181,25 @@ iframe {
 .hiw-content-section.title{
     max-width: 100%;
     background-color: lightgray ;;
+}
+
+.footer-content {
+    display:flex;
+    flex-direction: row-reverse;
+}
+
+.footer-content-section {
+    padding: 20px 20px;
+}
+
+.footer-content-section ul {
+    list-style-type: none;
+    display: flex;
+    gap: 15px;
+    flex-direction: row-reverse;
+}
+
+.footer-content-section p {
+    margin-top: 5px;
+    color: darkslategray;
 }
