--- a/styles/project5.css
+++ b/styles/project5.css
@@ -90,7 +90,7 @@ body {
 
 
 
-#encabezado {
+#navbar {
     height: 8rem;
     position: sticky;
     top: 0px;
@@ -111,7 +111,7 @@ a {
     color: inherit;
 }
 
-#navbar ul {
+#enlaces ul {
     display: flex;
     gap: 50px;
     list-style-type: none;
@@ -270,6 +270,10 @@ a {
         flex-direction: column;
         font-size: 2.5rem;
         row-gap: 2rem;
+    }
+
+    .red:hover {
+        transform: translateY(5px);
     }
 }
 
